Login signup(with email) complete

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,8 +12,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.LoginSignupAssignment">
-        <activity android:name=".ui.SignUpActivity"
-            android:noHistory="true"/>
+        <activity android:name=".ui.SignUpActivity"/>
         <activity android:name=".ui.LoggedInActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
